# github-webhooks-tg-bot

./: Cargo.toml  pyproject.toml
nginx/: Dockerfile  default.conf.template
src/: lib.rs  main.py  main.rs
