[package]
name = "github-webhooks-tg-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version =  "1.29.1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
