[tool.poetry]
name = "github-webhooks-tg-bot"
version = "0.1.0"
description = ""
authors = ["Pavel Paranin <pavel@paran.in>"]
readme = "README.md"
packages = [{include = "github_webhooks_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
